gen/SqParser.java
// Generated from D:/Job/Code/Java/Antlr/src\Sq.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OR=1, AND=2, EQ=3, SAND=4, NEQ=5, GT=6, LT=7, GTEQ=8, LTEQ=9, PLUS=10, 
		MINUS=11, MULT=12, DIV=13, MOD=14, POW=15, NOT=16, DOT=17, POW2=18, SHIFTLEFT=19, 
		SHIFTRIGHT=20, REV=21, PLUSPLUS=22, MINUSMINUS=23, ASSIGN=24, COLON=25, 
		SCOLON=26, OPAR=27, CPAR=28, OBRACE=29, CBRACE=30, SEP=31, SCI=32, RES=33, 
		INIT=34, TRUE=35, FALSE=36, NIL=37, IF=38, ELSE=39, WHILE=40, FOR=41, 
		PRINT=42, VAR=43, DEF=44, IMPORT=45, AS=46, RETURN=47, NEW=48, STEP=49, 
		CLASS=50, IMPLEMENTS=51, EXTEND=52, MATCH=53, CASE=54, BREAK=55, INTEGER=56, 
		DOUBLE=57, STR=58, ARRAY_DEC=59, ARRAY_INIT=60, ID=61, INT=62, FLOAT=63, 
		STRING=64, SINGLE_COMMENT=65, MULTI_COMMENT=66, SPACE=67, OTHER=68;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_class = 2, RULE_lib = 3, RULE_func = 4, 
		RULE_var = 5, RULE_stat = 6, RULE_int_var_declaration = 7, RULE_double_var_declaration = 8, 
		RULE_str_var_declaration = 9, RULE_cls_var_declaration = 10, RULE_arr_decl_var_declaration = 11, 
		RULE_arr_init_var_declaration = 12, RULE_series = 13, RULE_assignment = 14, 
		RULE_variable = 15, RULE_if_stat = 16, RULE_condition_block = 17, RULE_stat_block = 18, 
		RULE_comment = 19, RULE_while_stat = 20, RULE_for_stat = 21, RULE_match = 22, 
		RULE_m_series = 23, RULE_expression = 24, RULE_print = 25, RULE_expr = 26, 
		RULE_atom = 27, RULE_data_type = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "class", "lib", "func", "var", "stat", "int_var_declaration", 
			"double_var_declaration", "str_var_declaration", "cls_var_declaration", 
			"arr_decl_var_declaration", "arr_init_var_declaration", "series", "assignment", 
			"variable", "if_stat", "condition_block", "stat_block", "comment", "while_stat", 
			"for_stat", "match", "m_series", "expression", "print", "expr", "atom", 
			"data_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'=='", "'&'", "'!='", "'>'", "'<'", "'>='", "'<='", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", "'.'", "'**'", "'<<'", 
			"'>>'", "'~'", "'++'", "'--'", "'='", "':'", "';'", "'('", "')'", "'{'", 
			"'}'", "','", "'e'", "'=>'", "'<-'", "'true'", "'false'", "'nil'", "'if'", 
			"'else'", "'while'", "'for'", "'print'", "'var'", "'def'", "'import'", 
			"'as'", "'return'", "'new'", "'step'", "'class'", "'implements'", "'extend'", 
			"'match'", "'case'", "'break'", "'int'", "'double'", "'string'", null, 
			"'Array'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OR", "AND", "EQ", "SAND", "NEQ", "GT", "LT", "GTEQ", "LTEQ", "PLUS", 
			"MINUS", "MULT", "DIV", "MOD", "POW", "NOT", "DOT", "POW2", "SHIFTLEFT", 
			"SHIFTRIGHT", "REV", "PLUSPLUS", "MINUSMINUS", "ASSIGN", "COLON", "SCOLON", 
			"OPAR", "CPAR", "OBRACE", "CBRACE", "SEP", "SCI", "RES", "INIT", "TRUE", 
			"FALSE", "NIL", "IF", "ELSE", "WHILE", "FOR", "PRINT", "VAR", "DEF", 
			"IMPORT", "AS", "RETURN", "NEW", "STEP", "CLASS", "IMPLEMENTS", "EXTEND", 
			"MATCH", "CASE", "BREAK", "INTEGER", "DOUBLE", "STR", "ARRAY_DEC", "ARRAY_INIT", 
			"ID", "INT", "FLOAT", "STRING", "SINGLE_COMMENT", "MULTI_COMMENT", "SPACE", 
			"OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sq.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SqParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			block();
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & ((1L << (MINUS - 11)) | (1L << (NOT - 11)) | (1L << (REV - 11)) | (1L << (OPAR - 11)) | (1L << (TRUE - 11)) | (1L << (FALSE - 11)) | (1L << (NIL - 11)) | (1L << (IF - 11)) | (1L << (WHILE - 11)) | (1L << (FOR - 11)) | (1L << (PRINT - 11)) | (1L << (VAR - 11)) | (1L << (DEF - 11)) | (1L << (IMPORT - 11)) | (1L << (CLASS - 11)) | (1L << (ID - 11)) | (1L << (INT - 11)) | (1L << (FLOAT - 11)) | (1L << (STRING - 11)) | (1L << (SINGLE_COMMENT - 11)) | (1L << (MULTI_COMMENT - 11)) | (1L << (OTHER - 11)))) != 0)) {
				{
				{
				setState(61);
				stat();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(SqParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(SqParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(SqParser.OPAR, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode CPAR() { return getToken(SqParser.CPAR, 0); }
		public Stat_blockContext stat_block() {
			return getRuleContext(Stat_blockContext.class,0);
		}
		public TerminalNode IMPLEMENTS() { return getToken(SqParser.IMPLEMENTS, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(SqParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(SqParser.SEP, i);
		}
		public TerminalNode EXTEND() { return getToken(SqParser.EXTEND, 0); }
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassContext class() throws RecognitionException {
		ClassContext _localctx = new ClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class);
		try {
			int _alt;
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(CLASS);
				setState(68);
				match(ID);
				setState(69);
				match(OPAR);
				setState(70);
				variable();
				setState(71);
				match(CPAR);
				setState(72);
				stat_block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(CLASS);
				setState(75);
				match(ID);
				setState(76);
				match(IMPLEMENTS);
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(77);
						expr(0);
						setState(78);
						match(SEP);
						}
						} 
					}
					setState(84);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(85);
				expr(0);
				setState(86);
				match(OPAR);
				setState(87);
				variable();
				setState(88);
				match(CPAR);
				setState(89);
				stat_block();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				match(CLASS);
				setState(92);
				match(ID);
				setState(93);
				match(EXTEND);
				setState(94);
				expr(0);
				setState(95);
				match(OPAR);
				setState(96);
				variable();
				setState(97);
				match(CPAR);
				setState(98);
				stat_block();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(CLASS);
				setState(101);
				match(ID);
				setState(102);
				match(EXTEND);
				setState(103);
				expr(0);
				setState(104);
				match(IMPLEMENTS);
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(105);
						expr(0);
						setState(106);
						match(SEP);
						}
						} 
					}
					setState(112);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(113);
				expr(0);
				setState(114);
				match(OPAR);
				setState(115);
				variable();
				setState(116);
				match(CPAR);
				setState(117);
				stat_block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LibContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(SqParser.IMPORT, 0); }
		public List<TerminalNode> ID() { return getTokens(SqParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SqParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(SqParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(SqParser.DOT, i);
		}
		public List<TerminalNode> AS() { return getTokens(SqParser.AS); }
		public TerminalNode AS(int i) {
			return getToken(SqParser.AS, i);
		}
		public TerminalNode OBRACE() { return getToken(SqParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(SqParser.CBRACE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> SEP() { return getTokens(SqParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(SqParser.SEP, i);
		}
		public LibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterLib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitLib(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitLib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LibContext lib() throws RecognitionException {
		LibContext _localctx = new LibContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lib);
		int _la;
		try {
			int _alt;
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(IMPORT);
				setState(122);
				match(ID);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(123);
					match(DOT);
					setState(124);
					match(ID);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AS) {
					{
					{
					setState(130);
					match(AS);
					setState(131);
					match(ID);
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(IMPORT);
				setState(138);
				match(ID);
				setState(139);
				match(DOT);
				setState(140);
				match(OBRACE);
				setState(141);
				match(ID);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(142);
					match(DOT);
					setState(143);
					match(ID);
					}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AS) {
					{
					{
					setState(149);
					match(AS);
					setState(150);
					match(ID);
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				match(CBRACE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				match(IMPORT);
				setState(158);
				match(ID);
				setState(159);
				match(DOT);
				setState(160);
				match(OBRACE);
				setState(179);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(161);
						match(ID);
						setState(166);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==DOT) {
							{
							{
							setState(162);
							match(DOT);
							setState(163);
							match(ID);
							}
							}
							setState(168);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(173);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==AS) {
							{
							{
							setState(169);
							match(AS);
							setState(170);
							match(ID);
							}
							}
							setState(175);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(176);
						match(SEP);
						}
						} 
					}
					setState(181);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				setState(182);
				expr(0);
				setState(183);
				match(CBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(SqParser.DEF, 0); }
		public TerminalNode ID() { return getToken(SqParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(SqParser.OPAR, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode CPAR() { return getToken(SqParser.CPAR, 0); }
		public TerminalNode RES() { return getToken(SqParser.RES, 0); }
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public Stat_blockContext stat_block() {
			return getRuleContext(Stat_blockContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(DEF);
			setState(188);
			match(ID);
			setState(189);
			match(OPAR);
			setState(190);
			variable();
			setState(191);
			match(CPAR);
			setState(192);
			match(RES);
			setState(193);
			data_type();
			setState(194);
			stat_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public Int_var_declarationContext int_var_declaration() {
			return getRuleContext(Int_var_declarationContext.class,0);
		}
		public Double_var_declarationContext double_var_declaration() {
			return getRuleContext(Double_var_declarationContext.class,0);
		}
		public Str_var_declarationContext str_var_declaration() {
			return getRuleContext(Str_var_declarationContext.class,0);
		}
		public Arr_decl_var_declarationContext arr_decl_var_declaration() {
			return getRuleContext(Arr_decl_var_declarationContext.class,0);
		}
		public Arr_init_var_declarationContext arr_init_var_declaration() {
			return getRuleContext(Arr_init_var_declarationContext.class,0);
		}
		public Cls_var_declarationContext cls_var_declaration() {
			return getRuleContext(Cls_var_declarationContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var);
		try {
			setState(202);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				int_var_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(197);
				double_var_declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(198);
				str_var_declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(199);
				arr_decl_var_declaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(200);
				arr_init_var_declaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(201);
				cls_var_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Token OTHER;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public For_statContext for_stat() {
			return getRuleContext(For_statContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public LibContext lib() {
			return getRuleContext(LibContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public ClassContext class() {
			return getRuleContext(ClassContext.class,0);
		}
		public MatchContext match() {
			return getRuleContext(MatchContext.class,0);
		}
		public TerminalNode OTHER() { return getToken(SqParser.OTHER, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqListener ) ((SqListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqVisitor ) return ((SqVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}
